--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="dist/jquery.jcarousel.min.js"></script>
 
         <script type="text/javascript" src="jcarousel.connected-carousels.js"></script>
-
+        <script data-ad-client="ca-pub-3645928079454198" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body>
 
