--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Connected Carousels - jCarousel Examples</title>
+        <title>Walking Dead Fan Maps</title>
 
         <!-- Shared assets -->
         <link rel="stylesheet" type="text/css" href="_shared/css/style.css">
