--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Walking Dead Fan Maps</title>
 
         <!-- Shared assets -->
-        <link rel="stylesheet" type="text/css" href="_shared/css/style.css">
+        <link rel="stylesheet" type="text/css" href="shared/css/style.css">
 
         <!-- Example assets -->
         <link rel="stylesheet" type="text/css" href="jcarousel.connected-carousels.css">
@@ -27,12 +27,12 @@
                 <div class="stage">
                     <div class="carousel carousel-stage">
                         <ul>
-                            <li><img src="_shared/img/img1.jpg" width="600" height="400" alt=""></li>
-                            <li><img src="_shared/img/img2.jpg" width="600" height="400" alt=""></li>
-                            <li><img src="_shared/img/img3.jpg" width="600" height="400" alt=""></li>
-                            <li><img src="_shared/img/img4.jpg" width="600" height="400" alt=""></li>
-                            <li><img src="_shared/img/img5.jpg" width="600" height="400" alt=""></li>
-                            <li><img src="_shared/img/img6.jpg" width="600" height="400" alt=""></li>
+                            <li><img src="shared/img/img1.jpg" width="600" height="400" alt=""></li>
+                            <li><img src="shared/img/img2.jpg" width="600" height="400" alt=""></li>
+                            <li><img src="shared/img/img3.jpg" width="600" height="400" alt=""></li>
+                            <li><img src="shared/img/img4.jpg" width="600" height="400" alt=""></li>
+                            <li><img src="shared/img/img5.jpg" width="600" height="400" alt=""></li>
+                            <li><img src="shared/img/img6.jpg" width="600" height="400" alt=""></li>
                         </ul>
                     </div>
                     <p class="photo-credits">
@@ -47,12 +47,12 @@
                     <a href="#" class="next next-navigation">&rsaquo;</a>
                     <div class="carousel carousel-navigation">
                         <ul>
-                            <li><img src="_shared/img/img1_thumb.jpg" width="50" height="50" alt=""></li>
-                            <li><img src="_shared/img/img2_thumb.jpg" width="50" height="50" alt=""></li>
-                            <li><img src="_shared/img/img3_thumb.jpg" width="50" height="50" alt=""></li>
-                            <li><img src="_shared/img/img4_thumb.jpg" width="50" height="50" alt=""></li>
-                            <li><img src="_shared/img/img5_thumb.jpg" width="50" height="50" alt=""></li>
-                            <li><img src="_shared/img/img6_thumb.jpg" width="50" height="50" alt=""></li>
+                            <li><img src="shared/img/img1_thumb.jpg" width="50" height="50" alt=""></li>
+                            <li><img src="shared/img/img2_thumb.jpg" width="50" height="50" alt=""></li>
+                            <li><img src="shared/img/img3_thumb.jpg" width="50" height="50" alt=""></li>
+                            <li><img src="shared/img/img4_thumb.jpg" width="50" height="50" alt=""></li>
+                            <li><img src="shared/img/img5_thumb.jpg" width="50" height="50" alt=""></li>
+                            <li><img src="shared/img/img6_thumb.jpg" width="50" height="50" alt=""></li>
                         </ul>
                     </div>
                 </div>
