--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
 
         <div class="wrapper">
-            <h1>Connected Carousels</h1>
+            <h1>Carousels</h1>
             
             <p>This example shows how to connect two carousels together so that one carousels acts as a navigation for the other.</p>
             
