--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
 
         <div class="wrapper">
-            <h1>Carousels</h1>
+            <h1><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/The_Walking_Dead_2010_logo.svg/320px-The_Walking_Dead_2010_logo.svg.png"></img></h1>
             
             <p>This example shows how to connect two carousels together so that one carousels acts as a navigation for the other.</p>
             
