--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="wrapper">
             <div style="background-color: dodgerblue;"><h1><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/The_Walking_Dead_2010_logo.svg/320px-The_Walking_Dead_2010_logo.svg.png"></img></h1><div>
             
-            <p>This example shows how to connect two carousels together so that one carousels acts as a navigation for the other.</p>
+            <p>A collection of Fan Maps.</p>
             
             <div class="connected-carousels">
                 <div class="stage">
