--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
 
         <div class="wrapper">
-            <div style="background-color: dodgerblue;"><h1><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/The_Walking_Dead_2010_logo.svg/320px-The_Walking_Dead_2010_logo.svg.png"></img></h1><div>
+            <h1 style="background-color: dodgerblue;padding-top: .1em;"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/The_Walking_Dead_2010_logo.svg/320px-The_Walking_Dead_2010_logo.svg.png"></img></h1>
             
             <p>A collection of Fan Maps.</p>
             
