--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="wrapper">
             <h1 style="background-color: dodgerblue;padding-top: .1em;"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/The_Walking_Dead_2010_logo.svg/320px-The_Walking_Dead_2010_logo.svg.png"></img></h1>
             
-            <p>A collection of Fan Maps.</p>
+            <p style="text-align: center;">A collection of Fan Maps.</p>
             
             <div class="connected-carousels">
                 <div class="stage">
