--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="stage">
                     <div class="carousel carousel-stage">
                         <ul>
-                            <li class="photo-credits"><img src="share/img/img1.jpg" width="600" height="400" alt=""></li>
+                            <li><img src="share/img/img1.jpg" width="600" height="400" alt=""></li>
                             <li><img src="share/img/img2.jpg" width="600" height="400" alt=""></li>
                             <li><img src="share/img/img3.jpg" width="600" height="400" alt=""></li>
                             <li><img src="share/img/img4.jpg" width="600" height="400" alt=""></li>
@@ -35,7 +35,9 @@
                             <li><img src="share/img/img6.jpg" width="600" height="400" alt=""></li>
                         </ul>
                     </div>
-                    
+                    <p class="photo-credits">
+                        Photos by <a href="http://www.mw-fotografie.de">Marc Wiegelmann</a>
+                    </p>
                     <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
                     <a href="#" class="next next-stage"><span>&rsaquo;</span></a>
                 </div>
