--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <li><img src="share/img/img5_thumb.jpg" width="50" height="50" alt=""></li>
                             <li><img src="share/img/img6_thumb.jpg" width="50" height="50" alt=""></li>
                         </ul>
-                    </div><p style="text-align: center;">Select A Map</p>
+                    </div><p style="text-align: center;color:white;font-size:.6em;line-height:50%;">Select A Map</p>
                 </div>
             </div>
         </div>
