--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             
             
             <div class="connected-carousels">
-                <div class="stage">
-                    <div class="carousel carousel-stage">
+                <div style="width: 700px;" class="stage">
+                    <div style="height: 475px;" class="carousel carousel-stage">
                         <ul>
                             <li><img src="share/img/ezgif.com-video-to-gif.gif" width="725" height="475" alt=""></li>
                             <li><img src="share/img/ezgif.com-video-to-gif (1).gif" width="725" height="475" alt=""></li>
