--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                 <div style="width: 700px;" class="stage">
                     <div style="height: 475px;" class="carousel carousel-stage">
                         <ul>
-                            <li><img src="share/img/ezgif.com-video-to-gif.gif" width="700" height="475" alt=""></li>
-                            <li><img src="share/img/ezgif.com-video-to-gif (1).gif" width="700" height="475" alt=""></li>
-                            <li><img src="share/img/ezgif.com-video-to-gif (2).gif" width="700" height="475" alt=""></li>
+                            <li><img src="share/img/ezgif.com-video-to-gif.gif" width="675" height="475" alt=""></li>
+                            <li><img src="share/img/ezgif.com-video-to-gif (1).gif" width="675" height="475" alt=""></li>
+                            <li><img src="share/img/ezgif.com-video-to-gif (2).gif" width="675" height="475" alt=""></li>
                             <li><img src="share/img/img4.jpg" width="600" height="400" alt=""></li>
                             <li><img src="share/img/img5.jpg" width="600" height="400" alt=""></li>
                             <li><img src="share/img/img6.jpg" width="600" height="400" alt=""></li>
                         </ul>
                     </div>
-                    <p class="photo-credits">
+                    <p style="display: none;" class="photo-credits">
                         Photos by <a href="http://www.mw-fotografie.de">Marc Wiegelmann</a>
                     </p>
                     <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
