--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                     <a href="#" class="next next-stage"><span>&rsaquo;</span></a>
                 </div>
 
-                <div class="navigation">
+                <div style="width: 370px;" class="navigation">
                     <a href="#" class="prev prev-navigation">&lsaquo;</a>
                     <a href="#" class="next next-navigation">&rsaquo;</a>
-                    <div class="carousel carousel-navigation">
+                    <div style="width: 350px; "class="carousel carousel-navigation">
                         <ul>
                             <li><img src="share/img/img1_thumb.jpg" width="80" height="70" alt=""></li>
                             <li><img src="share/img/img2_thumb.jpg" width="80" height="70" alt=""></li>
