--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div style="width: 370px;" class="navigation">
                     <a href="#" class="prev prev-navigation">&lsaquo;</a>
                     <a href="#" class="next next-navigation">&rsaquo;</a>
-                    <div style="width: 350px; height: 81px;" class="carousel carousel-navigation">
+                    <div style="width: 358px; height: 81px; bottom: 39px;" class="carousel carousel-navigation">
                         <ul>
                             <li style="position;relative;"><img src="share/img/img1_thumb.jpg" width="80" height="70" alt=""><a style="bottom: 100px;"href="https://survivorgroups.walkingdeadfanmaps.com/ "target="_blank">Test</a></li>
                             <li><img src="share/img/img2_thumb.jpg" width="80" height="70" alt=""></li>
