--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="#" style="top: 0px;" class="prev prev-navigation">&lsaquo;</a>
                     <a href="#" style="top: 0px;" class="next next-navigation">&rsaquo;</a>
                     <div style="width: 358px; height: 81px; bottom: 39px;" class="carousel carousel-navigation">
-                        <ul>
+                        <ul><p style="text-align: center;color:white;font-size:.8em;line-height:50%;">Select A Map</p>
                             <li style="position;relative;"><img src="share/img/img1_thumb.jpg" width="80" height="70" alt=""><a style="bottom: 100px;"href="https://survivorgroups.walkingdeadfanmaps.com/ "target="_blank">Test</a></li>
                             <li><img src="share/img/img2_thumb.jpg" width="80" height="70" alt=""></li>
                             <li><img src="share/img/img3_thumb.jpg" width="80" height="70" alt=""></li>
@@ -54,7 +54,7 @@
                             <li><img src="share/img/img5_thumb.jpg" width="80" height="70" alt=""></li>
                             <li><img src="share/img/img6_thumb.jpg" width="80" height="70" alt=""></li>
                         </ul>
-                    </div><p style="text-align: center;color:white;font-size:.8em;line-height:50%;">Select A Map</p>
+                    </div>
                 </div>
             </div>
         </div>
