--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
                 </div>
 
                 <div style="width: 370px;" class="navigation">
-                    <a href="#" style="top: 0px;" class="prev prev-navigation">&lsaquo;</a>
-                    <a href="#" style="top: 0px;" class="next next-navigation">&rsaquo;</a>
+                    <a href="#" style="top: 0px; cursor:pointer;" class="prev prev-navigation">&lsaquo;</a>
+                    <a href="#" style="top: 0px; cursor:pointer;" class="next next-navigation">&rsaquo;</a>
                     <div style="width: 358px; height: 81px; bottom: 39px;" class="carousel carousel-navigation">
-                        <ul><p style="text-align: center;color:white;font-size:.8em;line-height:50%;">Select A Map</p>
+                        <p style="text-align: center;color:white;font-size:.8em;line-height:50%;">Select A Map</p>
+                        <ul>
                             <li style="position;relative;"><img src="share/img/img1_thumb.jpg" width="80" height="70" alt=""><a style="bottom: 100px;"href="https://survivorgroups.walkingdeadfanmaps.com/ "target="_blank">Test</a></li>
                             <li><img src="share/img/img2_thumb.jpg" width="80" height="70" alt=""></li>
                             <li><img src="share/img/img3_thumb.jpg" width="80" height="70" alt=""></li>
