--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
                     <a href="#" class="next next-stage"><span>&rsaquo;</span></a>
                 </div>
-
-                <div style="width: 370px;" class="navigation"> <p style="text-align: center;color:white;font-size:.8em;line-height:50%;">Select A Map</p>
+<p style="text-align: center;color:white;font-size:.8em;line-height:50%;">
+                <div style="width: 370px;" class="navigation"> Select A Map</p>
                     <a href="#" style="top: 0px; cursor:pointer;" class="prev prev-navigation">&lsaquo;</a>
                     <a href="#" style="top: 0px; cursor:pointer;" class="next next-navigation">&rsaquo;</a>
                     <div style="width: 358px; height: 81px; bottom: 39px;" class="carousel carousel-navigation">
