--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 </div>
 
                 <div style="width: 370px;" class="navigation"> 
-                    <a href="#" style="top: 0px; cursor:pointer;" class="prev prev-navigation">&lsaquo;</a>
-                    <a href="#" style="top: 0px; cursor:pointer;" class="next next-navigation">&rsaquo;</a>
-                    <div style="width: 358px; height: 81px; bottom: 39px;" class="carousel carousel-navigation">
+                    <a href="#" style="top: 0px; cursor:pointer; z-index: 3;" class="prev prev-navigation">&lsaquo;</a>
+                    <a href="#" style="top: 0px; cursor:pointer; z-index: 3;" class="next next-navigation">&rsaquo;</a>
+                    <div style="width: 358px; height: 81px; bottom: 41px;" class="carousel carousel-navigation">
                         <ul>
                             <li style="position;relative;"><img src="share/img/img1_thumb.jpg" width="80" height="70" alt=""><a style="bottom: 100px;"href="https://survivorgroups.walkingdeadfanmaps.com/ "target="_blank">Test</a></li>
                             <li><img src="share/img/img2_thumb.jpg" width="80" height="70" alt=""></li>
@@ -55,7 +55,9 @@
                             <li><img src="share/img/img6_thumb.jpg" width="80" height="70" alt=""></li>
                         </ul>
                     </div>
-                </div>
+                </div><p style="display:inline;bottom:100px" >
+                        Hello
+                    </p>
             </div>
         </div>
 
