--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
                     <a href="#" class="next next-stage"><span>&rsaquo;</span></a>
                 </div>
-
+                <p>Test</p>
                 <div style="width: 370px;" class="navigation"> 
                     <a href="#" style="top: 0px; cursor:pointer; z-index: 3;" class="prev prev-navigation">&lsaquo;</a>
                     <a href="#" style="top: 0px; cursor:pointer; z-index: 3;" class="next next-navigation">&rsaquo;</a>
