--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
                     <a href="#" class="next next-stage"><span>&rsaquo;</span></a>
                 </div>
-                <p>Test</p>
+                <p style="text-align: center; background-color: white;">Select a Map</p>
                 <div style="width: 370px;" class="navigation"> 
                     <a href="#" style="top: 0px; cursor:pointer; z-index: 3;" class="prev prev-navigation">&lsaquo;</a>
                     <a href="#" style="top: 0px; cursor:pointer; z-index: 3;" class="next next-navigation">&rsaquo;</a>
@@ -55,9 +55,7 @@
                             <li><img src="share/img/img6_thumb.jpg" width="80" height="70" alt=""></li>
                         </ul>
                     </div>
-                </div><p style="display:inline;bottom:100px" >
-                        Hello
-                    </p>
+                </div>
             </div>
         </div>
 
