--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
                     <a href="#" class="next next-stage"><span>&rsaquo;</span></a>
                 </div>
-                <p style="text-align: center; background-color: white; z-index: 1001 !important; line-height: 45px; width: 10%; margin: auto; vertical-align: text-top; font-size: .8em; padding-bottom: 10px; margin-top: -30px;">Select a Map</p>
+                <div><p style="text-align: center; background-color: white; z-index: 1001 !important; line-height: 45px; width: 10%; margin: auto; vertical-align: text-top; font-size: .8em; padding-bottom: 10px; margin-top: -30px;">Select a Map</p>
                 <div style="width: 370px;" class="navigation"> 
                     <a href="#" style="top: 0px; cursor:pointer; z-index: 3;" class="prev prev-navigation">&lsaquo;</a>
                     <a href="#" style="top: 0px; cursor:pointer; z-index: 3;" class="next next-navigation">&rsaquo;</a>
@@ -56,6 +56,7 @@
                         </ul>
                     </div>
                 </div>
+              </div>
             </div>
         </div>
 
