--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </div>
                 <div><p style="text-align: center; background-color: white; z-index: 1001 !important; line-height: 45px; width: 10%; margin: auto; vertical-align: text-top; font-size: .8em; padding-bottom: 10px; margin-top: -30px;">Select a Map</p>
                 <div style="width: 370px;" class="navigation"> 
-                    <a href="#" style="top: 0px; cursor:pointer; z-index: 3;" class="prev prev-navigation">&lsaquo;</a>
-                    <a href="#" style="top: 0px; cursor:pointer; z-index: 3;" class="next next-navigation">&rsaquo;</a>
+                    <a href="#" style="top: 0px; cursor:pointer; z-index: 0; left: -25px;" class="prev prev-navigation">&lsaquo;</a>
+                    <a href="#" style="top: 0px; cursor:pointer; z-index: 0; right: -25px;" class="next next-navigation">&rsaquo;</a>
                     <div style="width: 358px; height: 81px; bottom: 41px;" class="carousel carousel-navigation">
                         <ul>
                             <li style="position;relative;"><img src="share/img/img1_thumb.jpg" width="80" height="70" alt=""><a style="bottom: 100px;"href="https://survivorgroups.walkingdeadfanmaps.com/ "target="_blank">Test</a></li>
