--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
             <div class="connected-carousels">
                 <div style="width: 695px !important;" class="stage">
-                    <div style="height: 475px;" class="carousel carousel-stage">
+                    <div style="height: 475px; border: 10px solid #494949" class="carousel carousel-stage">
                         <ul>
                             <li><img src="share/img/ezgif.com-video-to-gif.gif" width="675" height="475" alt=""></li>
                             <li><img src="share/img/ezgif.com-video-to-gif (1).gif" width="675" height="475" alt=""></li>
@@ -45,7 +45,7 @@
                 <div style="width: 370px;" class="navigation"> 
                     <a href="#" style="top: 0px; cursor:pointer; left: -15px;" class="prev prev-navigation">&lsaquo;</a>
                     <a href="#" style="top: 0px; cursor:pointer; right: -25px;" class="next next-navigation">&rsaquo;</a>
-                    <div style="width: 358px; height: 81px; bottom: 41px;" class="carousel carousel-navigation">
+                    <div style="width: 358px; height: 81px; bottom: 41px;border: none;" class="carousel carousel-navigation">
                         <ul>
                             <li style="position;relative;"><img src="share/img/img1_thumb.jpg" width="80" height="70" alt=""><a style="bottom: 100px;"href="https://survivorgroups.walkingdeadfanmaps.com/ "target="_blank">Test</a></li>
                             <li><img src="share/img/img2_thumb.jpg" width="80" height="70" alt=""></li>
