--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <ul>
                             <li><img src="share/img/ezgif.com-video-to-gif.gif" width="675" height="475" alt=""></li>
                             <li><img src="share/img/ezgif.com-video-to-gif (1).gif" width="675" height="475" alt=""></li>
-                            <li><img src="share/img/ezgif.com-video-to-gif (2).gif" width="675" height="475" alt=""></li>
+                            <li><img src="share/img/twdactors.JPG" width="675" height="475" alt=""></li>
                             <li><img src="share/img/img4.jpg" width="600" height="400" alt=""></li>
                             <li><img src="share/img/img5.jpg" width="600" height="400" alt=""></li>
                             <li><img src="share/img/img6.jpg" width="600" height="400" alt=""></li>
