--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <ul>
                             <li style="position;relative;"><img src="share/img/ezgif.com-add-text (1).gif" width="80" height="70" alt=""><a style="bottom: 100px;"href="https://survivorgroups.walkingdeadfanmaps.com/ "target="_blank">Test</a></li>
                             <li><img src="share/img/img2_thumb.jpg" width="80" height="70" alt=""></li>
-                            <li><img src="share/img/twdactors (2).JPG" width="80" height="70" alt=""></li>
+                            <li><img src="share/img/twdactors.JPG" width="80" height="70" alt=""></li>
                             <li><img src="share/img/img4_thumb.jpg" width="80" height="70" alt=""></li>
                             <li><img src="share/img/img5_thumb.jpg" width="80" height="70" alt=""></li>
                             <li><img src="share/img/img6_thumb.jpg" width="80" height="70" alt=""></li>
