--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div style="width: 358px; height: 81px; bottom: 41px;border: none;" class="carousel carousel-navigation">
                         <ul>
                             <li style="position;relative;"><img src="share/img/survivorgroups.JPG" width="80" height="70" alt=""><a style="bottom: 100px;"href="https://survivorgroups.walkingdeadfanmaps.com/ "target="_blank">Test</a></li>
-                            <li><img src="share/img/img2_thumb.jpg" width="80" height="70" alt=""></li>
+                            <li><img src="share/img/studiotours.JPG" width="80" height="70" alt=""></li>
                             <li><img src="share/img/twdactors.JPG" width="80" height="70" alt=""></li>
                             <li><img src="share/img/img4_thumb.jpg" width="80" height="70" alt=""></li>
                             <li><img src="share/img/img5_thumb.jpg" width="80" height="70" alt=""></li>
