--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div style="width: 370px;" class="navigation"> 
                     <a href="#" style="top: -10px; cursor:pointer; left: -15px;" class="prev prev-navigation">&lsaquo;</a>
                     <a href="#" style="top: -10px; cursor:pointer; right: -4px;" class="next next-navigation">&rsaquo;</a>
-                    <div style="width: 358px; height: 81px; bottom: 41px;border: none;" class="carousel carousel-navigation">
+                    <div style="width: 358px; height: 81px; bottom: 41px;border: none;" class="carousel carousel-navigation jcarousel">
                         <ul>
                             <li style="position;relative;"><img src="share/img/survivorgroups.JPG" width="80" height="70" alt=""><a style="bottom: 100px;"href="https://survivorgroups.walkingdeadfanmaps.com/ "target="_blank">Test</a></li>
                             <li><img src="share/img/studiotours.JPG" width="80" height="70" alt=""></li>
