--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="#" style="top: -10px; cursor:pointer; right: -4px;" class="next next-navigation">&rsaquo;</a>
                     <div style="width: 358px; height: 81px; bottom: 41px;border: none;" class="carousel carousel-navigation jcarousel">
                         <ul>
-                            <li style="position;relative;"><a style="bottom: 100px;"href="https://survivorgroups.walkingdeadfanmaps.com/ "target="_blank"><img src="share/img/survivorgroups.JPG" width="80" height="70" alt=""></a></li>
+                            <li data-jcarouselcontrol="false"><a style="bottom: 100px;"href="https://survivorgroups.walkingdeadfanmaps.com/ "target="_blank"><img src="share/img/survivorgroups.JPG" width="80" height="70" alt=""></a></li>
                             <li><img src="share/img/studiotours.JPG" width="80" height="70" alt=""></li>
                             <li><img src="share/img/twdactors.JPG" width="80" height="70" alt=""></li>
                             <li><img src="share/img/img4_thumb.jpg" width="80" height="70" alt=""></li>
