--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li><img src="share/img/img6.jpg" width="600" height="400" alt=""></li>
                         </ul>
                     </div>
-                    <p style="display: none;" class="photo-credits">
+                    <p class="photo-credits">
                         Photos by <a href="http://www.mw-fotografie.de">Marc Wiegelmann</a>
                     </p>
                     <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
