--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                             <li><img src="share/img/img6.jpg" width="600" height="400" alt=""></li>
                         </ul>
                     </div>
-                    <p class="photo-credits">
-                        Photos by <a href="http://www.mw-fotografie.de">Marc Wiegelmann</a>
+                    <p "text-align: center; bottom: 45px; margin: auto; width: 90%;" class="photo-credits">
+                        Select A Map:</a>
                     </p>
                     <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
                     <a href="#" class="next next-stage"><span>&rsaquo;</span></a>
