--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li><img src="share/img/img6.jpg" width="600" height="400" alt=""></li>
                         </ul>
                     </div>
-                    <p "text-align: center; bottom: 45px; margin: auto; width: 90%;" class="photo-credits">
+                    <p style="text-align: center; bottom: 45px; margin: auto; width: 90%;" class="photo-credits">
                         Select A Map:</a>
                     </p>
                     <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
