--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
             <div class="connected-carousels">
                 <div style="width: 695px !important;" class="stage">
-                    <div style="height: 475px; border: 10px solid #494949" class="carousel carousel-stage jcarousel">
+                    <div style="height: 475px; border: 10px solid #494949; border: 10px solid #ffffff;" class="carousel carousel-stage jcarousel">
                         <ul>
                             <li><img src="share/img/ezgif.com-video-to-gif.gif" width="675" height="475" alt=""></li>
                             <li><img src="share/img/ezgif.com-video-to-gif (1).gif" width="675" height="475" alt=""></li>
