--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                             <li><img src="share/img/img6.jpg" width="600" height="400" alt=""></li>
                         </ul>
                     </div>
-                    <p style="text-align: center; bottom: 35px; margin: auto; width: 100%;" class="photo-credits">
-                        Select A Map:</a>
-                    </p>
+                    <p style="text-align: center; bottom: 35px; margin: auto; width: 100%;" class="photo-credits"><span style="background-color: white;">
+                        Select A Map:
+                        </span></p>
                     <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
                     <a href="#" class="next next-stage"><span>&rsaquo;</span></a>
                 </div>
