--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li><img src="share/img/img6.jpg" width="600" height="400" alt=""></li>
                         </ul>
                     </div>
-                    <p style="text-align: center; bottom: 35px; margin: auto; width: 100%;" class="photo-credits"><span style="background-color: white;">
+                    <p style="text-align: center; bottom: 35px; margin: auto; width: 100%;" class="photo-credits"><span style="background-color: white; padding: 3px; border-top-left-radius: 2px;border-top-right-radius: 2px;">
                         Select A Map:
                         </span></p>
                     <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
