--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <a href="#" style="top: -25px; cursor:pointer; right: -4px;" class="next next-navigation">&rsaquo;</a>
                     <div style="width: 660px; height: 155px; bottom: 55px;border: none;" class="carousel carousel-navigation jcarousel">
                         <ul>
-                            <li class="licontrol"><a "href="https://survivorgroups.walkingdeadfanmaps.com/"><img src="share/img/survivorgroups.JPG" width="155" height="145" alt=""></a></li>
-                            <li class="licontrol"><a "href="https://studio-tours.walkingdeadfanmaps.com/"><img src="share/img/studiotours.JPG" width="155" height="145" alt=""></a></li>
-                            <li class="licontrol"><a "href="https://actors.walkingdeadfanmaps.com/"><img src="share/img/twdactors.JPG" width="155" height="145" alt=""></a></li>
+                            <li class="licontrol"><a href="https://survivorgroups.walkingdeadfanmaps.com/"><img src="share/img/survivorgroups.JPG" width="155" height="145" alt=""></a></li>
+                            <li class="licontrol"><a href="https://studio-tours.walkingdeadfanmaps.com/"><img src="share/img/studiotours.JPG" width="155" height="145" alt=""></a></li>
+                            <li class="licontrol"><a href="https://actors.walkingdeadfanmaps.com/"><img src="share/img/twdactors.JPG" width="155" height="145" alt=""></a></li>
                             <li class="licontrol"><img src="share/img/img4_thumb.jpg" width="155" height="145" alt=""></li>
                             <li class="licontrol"><img src="share/img/img5_thumb.jpg" width="155" height="145" alt=""></li>
                             <li class="licontrol"><img src="share/img/img6_thumb.jpg" width="155" height="145" alt=""></li>
