--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </div>
                 
                 <div style="width: 585px;" class="navigation"> 
-                    <a href="#" style="top: -25px; cursor:pointer; left: -15px;" class="prev prev-navigation">&lsaquo;</a>
-                    <a href="#" style="top: -25px; cursor:pointer; right: -4px;" class="next next-navigation">&rsaquo;</a>
+                    <a href="#" style="top: -.05px; cursor:pointer; left: -15px;" class="prev prev-navigation">&lsaquo;</a>
+                    <a href="#" style="top: -.05px; cursor:pointer; right: -4px;" class="next next-navigation">&rsaquo;</a>
                     <div style="width: 585px; height: 140px; bottom: 55px;border: none;" class="carousel carousel-navigation jcarousel">
                         <ul>
                             <li><a target="_top" href="https://survivorgroups.walkingdeadfanmaps.com/"><img src="share/img/survivorgroups.JPG" width="135" height="125" alt=""></a></li>
