--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                     <p style="text-align: center; bottom: 35px; margin: auto; width: 100%;" class="photo-credits"><span style="background-color: white; padding: 3px; border-top-left-radius: 2px;border-top-right-radius: 2px;">
                         Select A Map:
                         </span></p>
-                    <a href="#" class="prev prev-stage"><span>&lsaquo;</span></a>
-                    <a href="#" class="next next-stage"><span>&rsaquo;</span></a>
+                    <a href="#" style="display: none;" class="prev prev-stage"><span>&lsaquo;</span></a>
+                    <a href="#" style="display: none;" class="next next-stage"><span>&rsaquo;</span></a>
                 </div>
                 
                 <div style="width: 585px;" class="navigation"> 
                     <a href="#" style="top: -.05px; cursor:pointer; left: -15px;" class="prev prev-navigation">&lsaquo;</a>
-                    <a href="#" style="top: -.05px; cursor:pointer; right: -4px;" class="next next-navigation">&rsaquo;</a>
-                    <div style="width: 585px; height: 140px; bottom: 55px;border: none;" class="carousel carousel-navigation jcarousel">
+                    <a href="#" style="top: -.05px; cursor:pointer; right: -14px;" class="next next-navigation">&rsaquo;</a>
+                    <div style="width: 585px; height: 140px; bottom: 55px;border: none;" class="carousel carousel-navigation">
                         <ul>
                             <li><a target="_top" href="https://survivorgroups.walkingdeadfanmaps.com/"><img src="share/img/survivorgroups.JPG" width="135" height="125" alt=""></a></li>
                             <li><a target="_top" href="https://studio-tours.walkingdeadfanmaps.com/"><img src="share/img/studiotours.JPG" width="135" height="125" alt=""></a></li>
