--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                             <li><img src="share/img/ezgif.com-video-to-gif.gif" width="675" height="475" alt=""></li>
                             <li><img src="share/img/ezgif.com-video-to-gif (1).gif" width="675" height="475" alt=""></li>
                             <li><img src="share/img/ezgif.com-video-to-gif (2).gif" width="675" height="475" alt=""></li>
-                            <li><img src="share/img/img4.jpg" width="600" height="400" alt=""></li>
-                            <li><img src="share/img/img5.jpg" width="600" height="400" alt=""></li>
-                            <li><img src="share/img/img6.jpg" width="600" height="400" alt=""></li>
+                            <li><img src="share/img/moresoonstage.JPG" width="600" height="400" alt=""></li>
+                            <li><img src="share/img/moresoonstage.JPG" width="600" height="400" alt=""></li>
+                            <li><img src="share/img/moresoonstage.JPG" width="600" height="400" alt=""></li>
                         </ul>
                     </div>
                     <p style="text-align: center; bottom: 35px; margin: auto; width: 100%;" class="photo-credits"><span style="background-color: white; padding: 3px; border-top-left-radius: 2px;border-top-right-radius: 2px;">
@@ -50,9 +50,9 @@
                             <li><a target="_top" href="https://survivorgroups.walkingdeadfanmaps.com/"><img src="share/img/survivorgroups.JPG" width="135" height="125" alt=""></a></li>
                             <li><a target="_top" href="https://studio-tours.walkingdeadfanmaps.com/"><img src="share/img/studiotours.JPG" width="135" height="125" alt=""></a></li>
                             <li><a target="_top" href="https://actors.walkingdeadfanmaps.com/"><img src="share/img/twdactors.JPG" width="135" height="125" alt=""></a></li>
-                            <li><img src="share/img/img4_thumb.jpg" width="135" height="125" alt=""></li>
-                            <li><img src="share/img/img5_thumb.jpg" width="135" height="125" alt=""></li>
-                            <li><img src="share/img/img6_thumb.jpg" width="135" height="125" alt=""></li>
+                            <li><img src="share/img/moresoon.JPG" width="135" height="125" alt=""></li>
+                            <li><img src="share/img/moresoon.JPG" width="135" height="125" alt=""></li>
+                            <li><img src="share/img/moresoon.JPG" width="135" height="125" alt=""></li>
                         </ul>
                     </div>
                 </div>
