--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <a href="#" style="top: -.05px; cursor:pointer; right: -14px;" class="next next-navigation">&rsaquo;</a>
                     <div style="width: 585px; height: 140px; bottom: 55px;border: none;" class="carousel carousel-navigation">
                         <ul>
-                            <li><a href="#"><img data-link="https://survivorgroups.walkingdeadfanmaps.com/" class="mapcontent src="share/img/survivorgroups.JPG" width="135" height="125" alt=""></a></li>
-                            <li><a href="#"><img data-link="https://studio-tours.walkingdeadfanmaps.com/" class="mapcontent src="share/img/studiotours.JPG" width="135" height="125" alt=""></a></li>
-                            <li><a href="#"><img data-link="https://actors.walkingdeadfanmaps.com/" class="mapcontent src="share/img/twdactors.JPG" width="135" height="125" alt=""></a></li>
+                            <li><a href="#"><img data-link="https://survivorgroups.walkingdeadfanmaps.com/" class="mapcontent" src="share/img/survivorgroups.JPG" width="135" height="125" alt=""></a></li>
+                            <li><a href="#"><img data-link="https://studio-tours.walkingdeadfanmaps.com/" class="mapcontent" src="share/img/studiotours.JPG" width="135" height="125" alt=""></a></li>
+                            <li><a href="#"><img data-link="https://actors.walkingdeadfanmaps.com/" class="mapcontent" src="share/img/twdactors.JPG" width="135" height="125" alt=""></a></li>
                             <li><img src="share/img/moresoon.JPG" width="135" height="125" alt=""></li>
                             <li><img src="share/img/moresoon.JPG" width="135" height="125" alt=""></li>
                             <li><img src="share/img/moresoon.JPG" width="135" height="125" alt=""></li>
