--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <script type="text/javascript" src="dist/jquery.jcarousel.min.js"></script>
 
         <script type="text/javascript" src="jcarousel.connected-carousels.js"></script>
-        <script data-ad-client="ca-pub-3645928079454198" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body>
 
@@ -69,6 +68,11 @@
                 });
             });
         </script>
+    <script type="text/javascript">
+var infolinks_pid = 3236459;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
     </body>
 
 </html>
