--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 });
             });
         </script>
+    <script data-cfasync="false" src="//d141wsrw9m4as6.cloudfront.net/?wrswd=839297"></script>
     <script type="text/javascript">
 var infolinks_pid = 3236459;
 var infolinks_wsid = 0;
