--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 });
             });
         </script>
+    <div class="shrsl_ShareASale_productShowCaseTarget_36254"></div>
+<script type="text/javascript"  src="https://showcase.shareasale.com/shareASale_liveWidget_loader.js?dt=02162020144532"></script>
+<script type="text/javascript">shrsl_ShareASale_liveWid_Init(36254, 2268062, 'shrsl_ShareASale_liveWid_wideSkyScraper_populate');</script> 
     <script type="text/javascript">
 var infolinks_pid = 3236459;
 var infolinks_wsid = 0;
