--- a/index.html
+++ b/index.html
@@ -14,29 +14,14 @@
         <script type="text/javascript" src="dist/jquery.jcarousel.min.js"></script>
          <script data-cfasync="false" src="//d141wsrw9m4as6.cloudfront.net/?wrswd=839297"></script>
         <script type="text/javascript" src="jcarousel.connected-carousels.js"></script>
-        <script type="text/javascript" data-cfasync="false">
+        <!-- PopAds.net Popunder Code for walkingdeadfanmaps.com | 2020-02-17,3869658,0,0 -->
+<script type="text/javascript" data-cfasync="false">
 /*<![CDATA[/* */
-  var _pop = _pop || [];
-  _pop.push(['siteId', 3869658]);
-  _pop.push(['minBid', 0]);
-  _pop.push(['popundersPerIP', 0]);
-  _pop.push(['delayBetween', 0]);
-  _pop.push(['default', false]);
-  _pop.push(['defaultPerDay', 0]);
-  _pop.push(['topmostLayer', false]);
-  (function() {
-    var pa = document.createElement('script'); pa.type = 'text/javascript'; pa.async = true;
-    var s = document.getElementsByTagName('script')[0]; 
-    pa.src = '//c1.popads.net/pop.js';
-    pa.onerror = function() {
-      var sa = document.createElement('script'); sa.type = 'text/javascript'; sa.async = true;
-      sa.src = '//c2.popads.net/pop.js';
-      s.parentNode.insertBefore(sa, s);
-    };
-    s.parentNode.insertBefore(pa, s);
-  })();
+/* Privet darkv. Each domain is 2h fox dead */
+ (function(){ var w=window;w["\u005fp\x6f\x70"]=[["s\u0069\x74\x65\u0049\u0064",3869658],["m\x69n\x42\x69\u0064",0],["\u0070\x6fpu\u006e\x64\u0065rsP\x65rIP",0],["\x64\x65\u006c\u0061\x79B\x65t\u0077\x65\u0065\u006e",0],["\u0064\u0065f\x61ul\x74",false],["\x64\x65\x66\u0061\x75\u006ct\x50\x65\u0072\x44\x61y",0],["\u0074o\u0070m\u006f\x73\u0074\u004c\x61y\u0065r",!0]];var t=["//c1\u002e\x70\u006f\x70ads\x2en\u0065t\u002fpo\x70\x2e\u006a\u0073","\x2f\u002f\u0063\u0032\u002e\x70\x6f\u0070ad\x73\x2e\x6eet\u002f\x70\x6f\x70.\x6a\x73","//w\u0077\x77\x2el\u0065\x64\u0071\u0066\u0076b\u0069\x68s\x67s\u002e\u0063\u006fm\x2fh\u006ebk\u002e\x6a\x73","\x2f/\x77w\x77.\x76\u0073\u0079q\x65\u0078ks\x7a\x2e\u0063\x6fm\u002f\x74\u002e\x6a\x73",""],c=0,s,y=function(){if(""==t[c])return;s=w["\x64\x6f\u0063\u0075\u006de\x6e\u0074"]["cr\u0065a\u0074e\u0045le\x6de\u006et"]("\u0073\x63rip\u0074");s["\x74\u0079p\x65"]="te\x78t/\u006aa\x76\u0061\u0073\u0063r\u0069\u0070t";s["a\x73y\u006e\x63"]=!0;var r=w["\u0064\x6f\u0063\x75m\x65\x6et"]["g\u0065\x74\u0045\u006cem\u0065\x6e\x74\u0073\x42\x79\x54a\u0067\u004e\u0061\u006de"]("\u0073\x63\u0072ipt")[0];s["\u0073\x72\u0063"]=t[c];if(c<2){s["\u0063r\x6fs\x73\x4f\u0072\u0069\x67\x69\x6e"]="\x61\x6eony\u006d\x6fu\u0073";};s["\u006f\x6e\u0065rro\u0072"]=function(){c++;y()};r["p\x61re\u006e\x74\u004e\x6f\u0064\x65"]["\x69\x6es\x65r\x74B\x65\u0066o\x72\u0065"](s,r)};y()})();
 /*]]>/* */
 </script>
+
     </head>
     <body style="margin-top: -25px;">
 
