--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
        
 
     </head>
+    <style>
+        @media only screen and (max-width: 1050px) {
+  .shrsl_liveWid_wideSkyScraper_36256 div.wideSkyScraper {
+    width: 128px;
+        }
+    }
     <body style="margin-top: -25px;">
 
         <div style="padding: 0px;" class="wrapper">
