--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     width: 128px;
         }
     }
+    </style>
     <body style="margin-top: -25px;">
 
         <div style="padding: 0px;" class="wrapper">
