--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <style>
         @media only screen and (max-width: 1050px) {
   .shrsl_liveWid_wideSkyScraper_36256 div.wideSkyScraper {
-    width: 128px;
+    width: 128px !important;
         }
     }
     </style>
