--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     width: 128px !important;
         }
     }
+        @media only screen and (max-width: 1050px) {
+  #shrs_MAP64648_target {
+    right: -37px !important;
+        }
+    } 
+         @media only screen and (max-width: 1050px) {
+    ul.shrs_MAP64648_productDspList li.MAP64648_pThumb a img  {
+    max-width: 100px !important;
+        }
+    }    
     </style>
     <body style="margin-top: -25px;">
 
