--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
     width: 128px !important;
         }
     }
+            @media only screen and (max-width: 775px) {
+  .shrsl_liveWid_wideSkyScraper_36256 div.wideSkyScraper {
+    display: none !important;
+        }
+    }
         @media only screen and (max-width: 1050px) {
   #shrs_MAP64648_target {
     right: -37px !important;
         }
     } 
-         @media only screen and (max-width: 1050px) {
+         @media only screen and (max-width: 1096px) {
     ul.shrs_MAP64648_productDspList li.MAP64648_pThumb a img  {
     max-width: 100px !important;
         }
