--- a/index.html
+++ b/index.html
@@ -37,7 +37,22 @@
     ul.shrs_MAP64648_productDspList li.MAP64648_pThumb a img  {
     max-width: 100px !important;
         }
-    }    
+    }
+       @media only screen and (max-width: 775px) {
+     #shrs_MAP64648_pagingDsp ul.shrs_MAP64648_pagingList li  {
+     display: inline !important;
+        }
+    }
+        @media only screen and (max-width: 775px) {
+     ul.shrs_MAP64648_productDspList li.MAP64648_pImage  {
+     display: inline !important;
+        }
+    } 
+       @media only screen and (max-width: 775px) {
+     ul.shrs_MAP64648_productDspList li.MAP64648_pMerchantName  {
+     display: inline !important;
+        }
+    }   
     </style>
     <body style="margin-top: -25px;">
 
