--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     </head>
     <style>
-        @media only screen and (max-width: 1050px) {
+        @media only screen and (min-width: 776px) and (max-width: 1050px) {
   .shrsl_liveWid_wideSkyScraper_36256 div.wideSkyScraper {
     width: 128px !important;
         }
@@ -28,12 +28,12 @@
     display: none !important;
         }
     }
-        @media only screen and (max-width: 1050px) {
+        @media only screen and (min-width: 776px) and (max-width: 1050px) {
   #shrs_MAP64648_target {
     right: -37px !important;
         }
     } 
-         @media only screen and (max-width: 1096px) {
+         @media only screen and (min-width: 776px) and(max-width: 1096px) {
     ul.shrs_MAP64648_productDspList li.MAP64648_pThumb a img  {
     max-width: 100px !important;
         }
