--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
     }
             @media only screen and (max-width: 775px) {
-  .shrsl_liveWid_wideSkyScraper_36256 div.wideSkyScraper {
+ .shrsl_liveWid_wideSkyScraper_36256 {
     display: none !important;
         }
     }
