--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
             @media only screen and (max-width: 775px) {
  .shrsl_liveWid_wideSkyScraper_36256 {
-    display: none !important;
+    width: 1px !important;
         }
     }
         @media only screen and (min-width: 776px) and (max-width: 1050px) {
