--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 
     </head>
     <style>
-        
+        @media only screen and (min-width: 776px) and (max-width: 1050px) {
+  .shrsl_liveWid_wideSkyScraper_36256 div.wideSkyScraper {
+    display: none !important;
+        }
+    }
             @media only screen and (max-width: 775px) {
  .shrsl_liveWid_wideSkyScraper_36256 div.wideSkyScraper {
     width: 1px !important;
