--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
      display: inline !important;
         }
     }   
+        @media only screen and (max-width: 1000px) {
+    .shrs_MAP64648_productDiv  {
+     display: inline !important;
+        }
+    }  
     </style>
     <body style="margin-top: -25px;">
 
