--- a/index.html
+++ b/index.html
@@ -33,24 +33,9 @@
     max-width: 100px !important;
         }
     }
-       @media only screen and (max-width: 1000px) {
-     #shrs_MAP64648_pagingDsp ul.shrs_MAP64648_pagingList li  {
-     display: inline !important;
-        }
-    }
         @media only screen and (max-width: 1000px) {
-     ul.shrs_MAP64648_productDspList li.MAP64648_pImage  {
-     display: inline !important;
-        }
-    } 
-       @media only screen and (max-width: 1000px) {
-     ul.shrs_MAP64648_productDspList li.MAP64648_pMerchantName  {
-     display: inline !important;
-        }
-    }   
-        @media only screen and (max-width: 1000px) {
-    .shrs_MAP64648_productDiv  {
-     display: inline !important;
+    ul.shrs_MAP64648_productDspList  {
+     display: inline-block !important;
         }
     }  
     </style>
