--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <script type="text/javascript" src="dist/jquery.jcarousel.min.js"></script>
          <script data-cfasync="false" src="//d141wsrw9m4as6.cloudfront.net/?wrswd=839625"></script>
         <script type="text/javascript" src="jcarousel.connected-carousels.js"></script>
-       
+       <script type="text/javascript">
+var infolinks_pid = 3236459;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 
     </head>
     <style>
@@ -101,11 +105,6 @@
         <!--<div class="shrsl_ShareASale_productShowCaseTarget_36254"></div>
 <script type="text/javascript"  src="https://showcase.shareasale.com/shareASale_liveWidget_loader.js?dt=02162020144532"></script>
 <script type="text/javascript">shrsl_ShareASale_liveWid_Init(36254, 2268062, 'shrsl_ShareASale_liveWid_wideSkyScraper_populate');</script>--> 
-    <script type="text/javascript">
-var infolinks_pid = 3236459;
-var infolinks_wsid = 0;
-</script>
-<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
-    </body>
+    
 
 </html>
