--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@ var infolinks_wsid = 0;
     ul.shrs_MAP64648_productDspList  {
      display: inline-block !important;
         }
+    } 
+       @media only screen and (max-width: 1000px) {
+       #shrs_MAP64648_target  {
+     width: 95% !important;
+     margin: auto !important;
+     bottom: 290px;
+        }
     }  
     </style>
     <body style="margin-top: -25px;">
