--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ var infolinks_wsid = 0;
        #shrs_MAP64648_target  {
      width: 95% !important;
      margin: auto !important;
-     bottom: 290px;
+     bottom: 290px !important;
         }
     }  
     </style>
