--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@ var infolinks_wsid = 0;
      margin: auto !important;
      top: 690px !important;
         }
-    }  
+    } 
+      @media only screen and (max-width: 1000px) {
+       body  {
+      zoom: 0.5;
+    -moz-transform: scale(0.5);
+        }
+    }   
     </style>
     <body style="margin-top: -25px;">
 
