--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         gtag('js', new Date());
         gtag('config', 'UA-158905194-1');
         </script>
-
+         <link type="image/ico" rel="icon" href="share/img/favicon.ico">
         <meta charset="utf-8">
         <title>Walking Dead Fan Maps</title>
 
