--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
          <link type="image/ico" rel="icon" href="share/img/favicon.ico">
         <meta charset="utf-8">
         <title>Walking Dead Fan Maps</title>
-
+        <link type="image/ico" rel="shortcut icon" href="share/image/favicon.ico">
+		<link type="image/ico" rel="icon"  href="share/image/favicon.ico">
         <!-- Shared assets -->
         <link rel="stylesheet" type="text/css" href="share/css/style.css">
 
