--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ var infolinks_wsid = 0;
                             <li><a href="#"><img data-link="https://survivorgroups.walkingdeadfanmaps.com/" class="mapcontent" src="share/img/survivorgroups.JPG" width="135" height="125" alt=""></a></li>
                             <li><a href="#"><img data-link="https://studio-tours.walkingdeadfanmaps.com/" class="mapcontent" src="share/img/studiotours.JPG" width="135" height="125" alt=""></a></li>
                             <li><a href="#"><img data-link="https://actors.walkingdeadfanmaps.com/" class="mapcontent" src="share/img/twdactors.JPG" width="135" height="125" alt=""></a></li>
-                            <li><a href="#"><img data-link="https://timeline.walkingdeadfanmaps.com/" class="mapcontent" src="share/img/moresoon.JPG" width="135" height="125" alt=""></a></li>
+                            <li><a href="#"><img data-link="https://timeline.walkingdeadfanmaps.com/" class="mapcontent" src="share/img/timeline.png" width="135" height="125" alt=""></a></li>
                             <li><img src="share/img/moresoon.JPG" width="135" height="125" alt=""></li>
                             <li><img src="share/img/moresoon.JPG" width="135" height="125" alt=""></li>
                         </ul>
