--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ var infolinks_wsid = 0;
                             <li><img src="share/img/ezgif.com-video-to-gif.gif" width="675" height="475" alt=""></li>
                             <li><img src="share/img/ezgif.com-video-to-gif (1).gif" width="675" height="475" alt=""></li>
                             <li><img src="share/img/ezgif.com-video-to-gif (2).gif" width="675" height="475" alt=""></li>
-                            <li><img src="share/img/moresoonstage.JPG" width="675" height="475" alt=""></li>
+                            <li><img src="share/img/timelinebig.gif" width="675" height="475" alt=""></li>
                             <li><img src="share/img/moresoonstage.JPG" width="675" height="475" alt=""></li>
                             <li><img src="share/img/moresoonstage.JPG" width="675" height="475" alt=""></li>
                         </ul>
