--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ var infolinks_wsid = 0;
             
             
             <div style="margin-top: -20px;" class="connected-carousels">
-                <div style="width: 695px !important;" class="stage">
+                <div style="width: 695px !important;margin-top: 40px;" class="stage">
                     <div style="height: 475px; border: 10px solid #494949; border: 10px solid #ffffff;" class="carousel carousel-stage jcarousel">
                         <ul>
                             <li><img src="share/img/ezgif.com-video-to-gif.gif" width="675" height="475" alt=""></li>
