--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ var infolinks_wsid = 0;
                     <a href="#" style="top: -.05px; cursor:pointer; right: -14px;" class="next next-navigation">&rsaquo;</a>
                     <div style="width: 585px; height: 140px; bottom: 55px;border: none;" class="carousel carousel-navigation">
                         <ul>
-                            <li><a href="#"><img data-link="https://survivorgroups.walkingdeadfanmaps.com/" class="mapcontent" src="share/img/survivorgroups.JPG" width="135" height="125" alt=""></a></li>
+                            <li><a href="#"><img data-link="https://walkingdeadfanmaps.com/survivorgroups" class="mapcontent" src="share/img/survivorgroups.JPG" width="135" height="125" alt=""></a></li>
                             <li><a href="#"><img data-link="https://walkingdeadfanmaps.com/tours" class="mapcontent" src="share/img/studiotours.JPG" width="135" height="125" alt=""></a></li>
                             <li><a href="#"><img data-link="https://walkingdeadfanmaps.com/actors" class="mapcontent" src="share/img/twdactors.JPG" width="135" height="125" alt=""></a></li>
                             <li><a href="#"><img data-link="https://walkingdeadfanmaps.com/twdtimeline" class="mapcontent" src="share/img/timeline.png" width="135" height="125" alt=""></a></li>
