--- a/survivorgroups/index.html
+++ b/survivorgroups/index.html
@@ -103,7 +103,7 @@
 								<!-- navigation dots -->
 							</div>
 							<div class="header" role="banner">
-								<div class="linkSocialContainer"><a style="font-size:.8em; font-weight:400;color:#CECECE!important;text-decoration:underline;opacity:.7;" href="http://walkingdeadfanmaps.com" class="link" target="_top" style="">walkingdeadfanmaps.com</a>
+								<div class="linkSocialContainer"><a style="font-size:.8em; font-weight:400;color:#CECECE!important;text-decoration:underline;opacity:.7;float: left;" href="http://walkingdeadfanmaps.com" class="link" target="_top" style="">walkingdeadfanmaps.com</a>
 									<span class="linkContainer"></span>
 									<span class="shareBtns">
 										<button class="shareIcon blackHover share_facebook icon-facebook-squared"></button>
